@@ -13,7 +13,8 @@ What's New in astroid 4.1.1?
 ============================
 Release date: TBA
 
-
+* Let `UnboundMethodModel` inherit from `FunctionModel` to improve inference of
+  dunder methods for unbound methods.
 
 What's New in astroid 4.1.0?
 ============================
